Fixed viewport on mobile phones, fix recover pages, and adjust form fields

--- a/demo/login.css
+++ b/demo/login.css
@@ -57,9 +57,12 @@ span.prefix {
 	-o-border-radius: 0;
 	border-radius: 0;
 	border-width: 1px 0 0 1px;
-	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+	/*-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
 	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-	box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);*/
+	-webkit-box-shadow: 0;
+	-moz-box-shadow: 0;
+	box-shadow: 0;
 	color: #bbb;
 	height: 41px;
 	line-height: 41px;
@@ -82,6 +85,9 @@ textarea {
 	-o-border-radius: 0;
 	border-radius: 0;
 	border-width: 1px 1px 0 0;
+	-webkit-box-shadow: 0;
+	-moz-box-shadow: 0;
+	box-shadow: 0;
 	font-size: 12px;
 	margin: 0;
 	padding: 20px 12px;
@@ -201,6 +207,7 @@ p.centered {
 	.login-top, 
 	.login-header, 
 	.login-content, 
+	.login-info, 
 	.login-footer {
 		margin: 0 auto;
 		width: auto;
